// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`string-test basic type json-schema 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"$schema\\": \\"http://json-schema.org/draft-07/schema#\\",
  \\"properties\\": {
    \\"field\\": {
      \\"type\\": \\"string\\"
    }
  },
  \\"required\\": [
    \\"field\\"
  ]
}"
`;

exports[`string-test basic type typescript 1`] = `
"// Generated file, do not edit!

// tslint:disable array-type
// @ts-ignore -- ignore possibly unused type parameters
export interface TestInterfaceBase<IDType, DateType>
{
  field: string
}"
`;

exports[`string-test enums are supported json-schema 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"$schema\\": \\"http://json-schema.org/draft-07/schema#\\",
  \\"properties\\": {
    \\"field\\": {
      \\"type\\": \\"string\\",
      \\"enum\\": [
        \\"Alpha\\",
        \\"Beta\\",
        \\"Gamma\\"
      ]
    }
  },
  \\"required\\": [
    \\"field\\"
  ]
}"
`;

exports[`string-test enums are supported typescript 1`] = `
"// Generated file, do not edit!

// tslint:disable array-type
// @ts-ignore -- ignore possibly unused type parameters
export interface TestInterfaceBase<IDType, DateType>
{
  field: 'Alpha' | 'Beta' | 'Gamma'
}"
`;
